# MD_modeling_MPI

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: log.txt  system.txt
report/: data.txt  lat.txt  nbody-4287.txt  nbody-5065.txt  ratio.py  speedup.py
shaders/: sphere_vs.glsl
src/: CMakeLists.txt
src/MD_modeling/: MD_modeling.cpp
src/MPI/: all-cell.cpp  main.cpp
src/Math/: math_3d.cpp
src/OpenGL/: distance.cpp  main.cpp  math_3d.cpp  n_body.cpp
src/glfw/: distance.cpp  glfw.cpp  main.cpp
src/include/: MD_modeling.hpp  MPI.hpp  ObjectTransform.hpp  camera.hpp  distance.hpp  glfw.hpp  lib.hpp  math_3d.h  n_body.hpp  try.hpp
